--- a/app/views/admin/statistics/_statistics.html.erb
+++ b/app/views/admin/statistics/_statistics.html.erb
@@ -3,8 +3,9 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
+
   <link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
   <script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
 
@@ -154,6 +155,9 @@ new Morris.Bar({
     ykeys: ['a'],
     labels: ['Ofertas publicadas']
 });
+
+$('#registrations').attr("class","tab-pane");
+$('#publish').attr("class","tab-pane");
 
 
 </script>
