title images in offer#edit

--- a/app/views/offers/edit.html.erb
+++ b/app/views/offers/edit.html.erb
@@ -28,7 +28,7 @@
                             <div class="my-span2" style="width: 135px">
                               <div class="roundedTwo">
                                 <%= check_box_tag "title_ids[]", p2.id, @offer.prefer(p2), :id => p2.id %>
-                                <label for="<%= p2.id %>" style="background: url('../assets/<%= p2.icon_name%>.png') no-repeat no-repeat; background-size: 100px"></label>
+                                <label for="<%= p2.id %>" style="background: url('/assets/<%= p2.icon_name%>.png') no-repeat no-repeat; background-size: 100px"></label>
                               </div>
                             </div>
 
