--- a/app/views/admin/statistics/_statistics.html.erb
+++ b/app/views/admin/statistics/_statistics.html.erb
@@ -30,29 +30,32 @@
 
         <div class=" clearfix" id="titles">
 
-          Intereses por clientes:
+          <h3>
+          Intereses por clientes </h3>
           <div id="titlesChart" style="height: 310px;"></div>
-
-          Intereses por oferta:
+          <div style="margin: 10px 0;">
+          <h3>Intereses por oferta</h3>
           <div id="titlesOfferChart" style="height: 310px;"></div>
-
+          </div>
         </div>
         <!--end myTabContent-->
 
-        <div class=" clearfix" id="registrations">
+        <div class=" clearfix" style="margin: 20px 0" id="registrations">
 
-          Clientes registrados por mes:
+          <h3>Clientes registrados por mes</h3>
           <div id="clientsChart" style="height: 310px;"></div>
 
-          Empresas registradas por mes:
-          <div id="companyChart" style="height: 310px;"></div>
+          <div style="margin: 10px 0;">
 
+          <h3>Empresas registradas por mes</h3>
+          <div id="companyChart" style="height: 310px;"></div>
+</div>
         </div>
         <!--end myTabContent-->
 
-        <div class=" clearfix" id="publish">
-
-          Ofertas publicadas por mes:
+        <div class=" clearfix" style="margin: 20px 0" id="publish">
+          <h3>
+          Ofertas publicadas por mes</h3>
           <div id="offerChart" style="height: 310px;"></div>
 
         </div>
