Change texts in statistics

--- a/app/views/users/_statistics_client.html.erb
+++ b/app/views/users/_statistics_client.html.erb
@@ -30,7 +30,7 @@
       <ul id="myTab" class="nav nav-tabs">
         <li class="active"><a href="#titles" data-toggle="tab">Intereses</a></li>
         <li><a href="#activity" data-toggle="tab">Actividad</a></li>
-        <li><a href="#completadas" data-toggle="tab">Finalizadas</a></li>
+        <li><a href="#completadas" data-toggle="tab">Participación</a></li>
       </ul>
 
       <div id="myTabContent" class="tab-content">
@@ -51,7 +51,7 @@
 
         <div class="tab-pane active clearfix" id="completadas">
 
-          <label class="pull-left"><h5>Cantidad de ofertas a las que te has inscripto en el último año</h5></label>
+          <label class="pull-left"><h5>Ofertas que has ganado y perdido</h5></label>
           <div id="winChart" style="height: 310px;"></div>
 
         </div><!--end myTabContent-->
