--- a/app/views/users/_statistics_company.html.erb
+++ b/app/views/users/_statistics_company.html.erb
@@ -44,7 +44,7 @@
 
         <div class="tab-pane active" id="competition">
 
-          <label class="pull-left"><h5>Cantidad de ofertas de las competencias por interés</h5></label>
+          <label class="pull-left"><h5>Cantidad de ofertas de la competencia por interés</h5></label>
 
           <div id="compChart" style="height: 310px;"></div>
 
