pages style fixed

--- a/app/views/pages/faqs.html.erb
+++ b/app/views/pages/faqs.html.erb
@@ -16,10 +16,9 @@
     <!--end header-->
 
 
-    <div class="container" id="main-content" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
-         xmlns="http://www.w3.org/1999/html">
+    <div class="container" id="main-content">
       <div class="rounded-borders ">
-        <section class="span12 rounded-borders light-shadowed">
+        <section class="span11 rounded-borders light-shadowed">
           <header class="out rounded-borders-top">
           <h2>Preguntas Frecuentes</h2>
           </header>
@@ -201,7 +200,7 @@
 
     <div class="container" id="main-content">
       <div class="rounded-borders ">
-        <section class="span12 rounded-borders light-shadowed">
+        <section class="span11 rounded-borders light-shadowed">
           <header class="out rounded-borders-top">
             <h2>Preguntas Frecuentes</h2>
           </header>
