Uncomment map in offer#show

--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -76,10 +76,10 @@
 
         </div>
 
-        <!--
+
         <div class="tab-pane" id="mapas" align="center">
 
-          %=  gmaps("map_options" => {
+          <%=  gmaps("map_options" => {
                "zoom" => 13,
                  "center_latitude" => @latitude,
                  "center_longitude" => @longitude,
@@ -87,7 +87,7 @@
           }, "markers" => {"data" => @json}) %>
 
         </div>
-        -->
+
 
 
         <div class="tab-pane" id="clients">
